...
        
        // Configure the cell...
        let movie = self.movies(for: indexPath)
        cell.titleLabel.text = movie.title
        cell.titleLabel.accessibilityIdentifier = "title"
        cell.popularityLabel.text = movie.popularity?.description
        cell.popularityLabel.accessibilityIdentifier = "popularity"

        if let posterPath = movie.poster_path {
            let imageURL = URL(string: Constants.domainName + posterPath)
            cell.imgView.downloadedFrom(url: imageURL!)
        }
        else if let backdropPath = movie.backdrop_path{
            let imageURL = URL(string: Constants.domainName + backdropPath)
            cell.imgView.downloadedFrom(url: imageURL!)
        }
        
        cell.imgView.accessibilityIdentifier = "image"
        return cell
    }
    
    override func tableView(_ tableView: UITableView, heightForRowAt indexPath: IndexPath) -> CGFloat {
        return UITableView.automaticDimension
    }
...
