...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GKd-vz-3i3">
                                <rect key="frame" x="212" y="219" width="149" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="BOOK">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="bookingClick:" destination="d3f-t2-HNj" eventType="touchUpInside" id="GLk-XK-3Il"/>
                                    <segue destination="Hz6-6M-1NX" kind="show" id="JdQ-kN-nrg"/>
                                </connections>
...
